# boirc

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  chat_client.cpp  chat_message.hpp  socks4.hpp  sync_client.cpp
src/misc/: CMakeLists.txt  utils.cpp  utils.h
